--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 setuptools
-setuptools_scm
+setuptools-scm
+# For the Dash app in weeks 1 to 5
 pandas
 openpyxl
-black
-dash
 plotly
+dash
+dash-bootstrap-components
+# For the Flask app in weeks 6 to 10
+flask
+flask_sqlalchemy
+# For the testing (both apps)
 pytest
 selenium
+pytest-cov
+# Dash testing is covered separately in week 4: dash[testing] or dash\[testing]
