--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ pandas
 openpyxl
 plotly
 dash
+dash-daq
 dash-bootstrap-components
+psutil
 # For the Flask app in weeks 6 to 10
 flask
 flask_sqlalchemy
