updated README, requirements.txt and testing files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,14 @@
 setuptools
 setuptools-scm
-# For the Dash app in weeks 1 to 5
 pandas
 openpyxl
 plotly
 dash==2.18.2
 dash-bootstrap-components==1.7.1
 psutil
-# For the Flask app in weeks 6 to 10
 flask
 flask_sqlalchemy
-# For the testing (both apps)
 pytest
 selenium
 pytest-cov
-# Dash testing is covered separately in week 4: dash[testing] or dash\[testing]
+# dash[testing] or dash\[testing]
