--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,67 @@
-setuptools
-setuptools-scm
-pandas
-openpyxl
-plotly
+attrs==24.3.0
+beautifulsoup4==4.13.3
+blinker==1.9.0
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+coverage==7.6.10
+cryptography==44.0.1
 dash==2.18.2
 dash-bootstrap-components==1.7.1
-psutil
-flask
-flask_sqlalchemy
-pytest
-selenium
-pytest-cov
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dash-testing-stub==0.0.2
+dill==0.3.9
+e==1.4.5
+et_xmlfile==2.0.0
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+h11==0.14.0
+idna==3.10
+importlib_metadata==8.5.0
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+lxml==5.3.1
+MarkupSafe==3.0.2
+multiprocess==0.70.17
+nest-asyncio==1.6.0
+numpy==2.2.1
+openpyxl==3.1.5
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+percy==2.0.2
+plotly==5.24.1
+pluggy==1.5.0
+psutil==7.0.0
+pycparser==2.22
+pyOpenSSL==25.0.0
+PySocks==1.7.1
+pytest==8.3.4
+pytest-cov==6.0.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+requests==2.32.3
+retrying==1.3.4
+selenium==4.2.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SQLAlchemy==2.0.37
+tenacity==9.0.0
+trio==0.28.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==1.26.20
+urllib3-secure-extra==0.1.0
+waitress==3.0.2
+websocket-client==1.8.0
+Werkzeug==3.0.6
+wsproto==1.2.0
+zipp==3.21.0
 # dash[testing] or dash\[testing]
